force-app/main/default/objects/Project_Sprint__c/Project_Sprint__c.object-meta.xml
<CustomObject>
    <label>Project Sprint</label>
    <nameField>
        <label>Sprint Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Sprints</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>