force-app/main/default/objects/Project_Sprint__c/fields/Actual_Mandays__c.field-meta.xml
<CustomField>
    <fullName>Actual_Mandays__c</fullName>
    <label>Actual Mandays</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>