force-app/main/default/objects/Project_Sprint__c/fields/Sprint_Description__c.field-meta.xml
<CustomField>
    <fullName>Sprint_Description__c</fullName>
    <label>Sprint Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>