force-app/main/default/objects/Project_Sprint__c/fields/Sprint_Goal__c.field-meta.xml
<CustomField>
    <fullName>Sprint_Goal__c</fullName>
    <label>Sprint Goal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>