force-app/main/default/objects/Project_Sprint__c/fields/Sprint_Number__c.field-meta.xml
<CustomField>
    <fullName>Sprint_Number__c</fullName>
    <label>Sprint Number</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>