force-app/main/default/objects/Project_Sprint__c/fields/Total_Activities__c.field-meta.xml
<CustomField>
    <fullName>Total_Activities__c</fullName>
    <label>Total Activities</label>
    <summaryForeignKey>Project_Activity__c.Project_Sprint__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>