force-app/main/default/objects/Project_Sprint__c/fields/Total_Actual_Mandays__c.field-meta.xml
<CustomField>
    <fullName>Total_Actual_Mandays__c</fullName>
    <label>Total Actual Mandays</label>
    <precision>18</precision>
    <scale>2</scale>
    <summarizedField>Project_Activity__c.Actual_Mandays__c</summarizedField>
    <summaryForeignKey>Project_Activity__c.Project_Sprint__c</summaryForeignKey>
    <summaryOperation>SUM</summaryOperation>
    <type>Summary</type>
</CustomField>