force-app/main/default/objects/Project_Sprint__c/fields/Total_Completed_Activities__c.field-meta.xml
<CustomField>
    <fullName>Total_Completed_Activities__c</fullName>
    <label>Total Completed Activities</label>
    <summaryFilterItems>
        <field>Project_Activity__c.Activity_Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>Project_Activity__c.Project_Sprint__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>