force-app/main/default/objects/Project_Sprint__c/recordTypes/Default.recordType-meta.xml
<RecordType>
    <fullName>Default</fullName>
    <active>false</active>
    <label>Default</label>
</RecordType>