force-app/main/default/objects/Project_Sprint__c/recordTypes/VISEO_Project_Sprint.recordType-meta.xml
<RecordType>
    <fullName>VISEO_Project_Sprint</fullName>
    <active>true</active>
    <label>VISEO Project Sprint</label>
</RecordType>